Fixed log in center alignment

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,9 +1,11 @@
 .inner-box {
 	position: absolute;
-	width: 448px;
-	height: 386px;
-	left: 496px;
-	top: 230px;
+	// width: 448px;
+	// height: 386px;
+	// left: 496px;
+	top: 20%;
+	left: 40%;
+	margin-right: -100px;
 
 	background: #EAEFF3;
 	border-radius: 10px;
